# computergraphics

./: Algorithms_Comparison_AR.md  Algorithms_Explanation_AR.md  CMakeLists.txt  Presentation_Template.md  README.md  Report_Template.md  build_and_run.bat  build_log.txt  build_output.txt  compile_debug.py  debug2.bat  debug3.bat  debug_app.bat  debug_compile.bat  debug_storage.bat  final_build_log.txt  grafic report.docx  ninja_out.txt  py_err.txt  test_compile.ps1  v.txt
docs/plans/: 2026-05-09-cg-project.md
src/: App.cpp  App.h  Clipping.cpp  Clipping.h  Common.h  Curves.cpp  Curves.h  DrawingAlgorithms.cpp  DrawingAlgorithms.h  Shape.cpp  Shape.h  Storage.cpp  Storage.h  Transformations.cpp  Transformations.h  main.cpp
